# py-talk

./: .gitignore  README.md  pyproject.toml
client/: __main__.py
server/: __main__.py
