[tool.poetry]
name = "socket-chat"
version = "0.0.2"
description = "A very simple chat self-hosted chat application written in Python."
authors = ["Fluffy-Bean <michal-gdula@protonmail.com>"]
readme = "README.md"
license = "MIT"
packages = [
    {include = "server", from = "src"},
    {include = "client", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
